@@ -1,6 +1,7 @@
 requires "Carp" => "0";
 requires "Const::Fast" => "0";
 requires "Exporter" => "0";
+requires "List::AllUtils" => "0";
 requires "Package::Stash" => "0";
 requires "Ref::Util" => "0";
 requires "perl" => "v5.10.0";
